# LSQR-CUDA

./: .gitignore  CMakeLists.txt  README.md  analysis.py  common.h  compile_all.sh  gen_data.sh  gen_results.sh  generateMatrix.py  lsqr.cc  lsqr.h  main.cc  matrix.cc  matrix.h
MATLAB_implementation/: grad_desc.m  lsqr_algo.m  test_lsqr.m
lsqr_cpu/: Makefile  lsqr_cpu.cpp
lsqr_gpu/: Makefile  lsqr_gpu.cpp  lsqr_gpu.h  main.cu
lsqr_gpu/matmul/: GPUVector.cu  GPUVector.h  SpMat.cu  SpMat.h  test_gpu_matrix.cu  utils.h
matmul/: CSRMatrix.h  GPUMatrix.h  GPUVector.cu  GPUVector.h  SpMat.cu  SpMat.h  a.exp  a.lib  test_gpu_matrix.cu  utils.h
testing/: create_sparse_matrix.cpp  create_vector.cpp  read_sparse_matrix.cpp  read_vector.cpp
